# ptex

./: CMakeLists.txt  package.py
cmake/: Ptex-config-version.cmake.in
src/ptex/: CMakeLists.txt
